# fash

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: qa.yml
src/: hasher.rs  lib.rs  main.rs
tests/: test_file_to_hash.txt
